--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-modal": "^3.11.2",
-    "sass": "^1.27.0",
-    "websocket": "^1.0.32"
+    "sass": "^1.27.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.7",
